--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5772,17 +5772,24 @@ h6 {
 .RegisterForm label{
   font-size: 16px;
   color: #131313;
-  font-weight: bold;
+  font-weight: 600;
 }
 .RegisterForm .SubmitBtn{
   background-color: #28AE61;
   color: #FFFFFF;
+  transition: 0.3s ease-in-out;
+}
+.RegisterForm .SubmitBtn:hover{
+  background-color: transparent;
+  color: #28AE61;
+  border: 1px solid #28AE61;
 }
 .RegisterForm .PriceBoard{
   width: 50%;
   background-color: #E7E7E7;
   padding: 10px 20px;
   border-radius: 5px;
+  border: 2px dashed #000;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
 @media (max-width: 767px) {
@@ -5883,5 +5890,12 @@ h6 {
 }
 .navbar-brand img{
   filter: brightness(120%) contrast(120%);
+}
+.fs-20{
+  font-size: 20px;
+  margin-left: -10px;
+}
+.fs-14{
+  font-size: 13px;
 }
 /*# sourceMappingURL=style.css.map */
