--- a/views/components/about.ejs
+++ b/views/components/about.ejs
@@ -66,7 +66,7 @@
             class="boxed-btn3 wow fadeInLeft"
             data-wow-duration="1s"
             data-wow-delay=".7s"
-            >Buy Tickets</a
+            >Register</a
           >
         </div>
       </div>
