--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -25,7 +25,7 @@
                   class="boxed-btn3 mt-3 wow fadeInUp"
                   data-wow-duration="1s"
                   data-wow-delay=".6s"
-                  >Buy Tickets</a
+                  >Register</a
                 >
               </div>
             </div>
