--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -11,7 +11,9 @@
                 <h4>Personal Details</h4>
 
                 <div class="mb-3 mt-4">
-                    <label for="studentType" class="form-label">Are you a student of IMSciences?</label>
+                    <label for="studentType" class="form-label">Are you a student of IMSciences?
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="studentType" value="yes" id="studentTypeYes">
                         <label class="form-check-label" for="studentTypeYes">Yes</label>
@@ -21,53 +23,69 @@
                         <label class="form-check-label" for="studentTypeNo">No</label>
                     </div>
                 </div>
-                <div class="mb-3" id="studentIdInput" style="display: none;">
-                    <label for="studentIdImage" class="form-label">Upload student ID card</label>
+                <div class="mb-3 border-start ps-2 ms-3" id="studentIdInput" style="display: none;">
+                    <label for="studentIdImage" class="form-label">Upload student ID card
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <input type="file" class="form-control" id="studentIdImage" name="studentIdImage"
                         accept="image/png,image/PNG, image/jpg, image/jpeg" />
-
-                    
-
+                        <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>
 
                 </div>
 
+
                 <div class="mb-3">
-                    <label for="studentImage" class="form-label">Upload Your Picture</label>
+                    <label for="studentImage" class="form-label">Upload Your Picture
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <input type="file" class="form-control" id="studentImage" name="studentImage"
                         accept="image/png,image/PNG, image/jpg, image/jpeg" />
+                        <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>
 
                     
 
                 </div>
                 <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
+                    <label for="name" class="form-label">Name
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <input type="text" class="form-control" name="name" id="name" placeholder="Enter Full Name"
                         required>
                 </div>
                 <div class="mb-3">
-                    <label for="FatherName" class="form-label">Father Name</label>
+                    <label for="FatherName" class="form-label">Father Name
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <input type="text" class="form-control" name="FatherName" id="FatherName"
                         placeholder="Enter Father Name" >
                 </div>
                 <div class="mb-3">
-                    <label for="ContactNumber" class="form-label">Contact Number</label>
+                    <label for="ContactNumber" class="form-label">Contact Number
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
 
                     <input type="tel" inputmode="numeric" class="form-control" name="ContactNumber" id="ContactNumber"
                         placeholder="Enter Contact Number" >
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
+                    <label for="email" class="form-label">Email
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <input type="email" class="form-control" name="email" id="email" placeholder="Enter Email">
                 </div>
                 <div class="mb-3">
-                    <label for="cnic" class="form-label">CNIC</label>
+                    <label for="cnic" class="form-label">CNIC
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <input type="number" class="form-control" name="cnic" id="cnic" placeholder="Enter CNIC">
                 </div>
                 <div class="mb-3 mt-2" id="cnicImageDiv" style="display:none;">
-                    <label for="cnicImage" class="form-label">Upload CNIC Picture</label>
+                    <label for="cnicImage" class="form-label">Upload CNIC Picture
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <input type="file" class="form-control" id="cnicImage" name="cnicImage"
                         accept="image/png,image/PNG, image/jpg, image/jpeg"/>
-                    
+                        <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>                    
 
                 </div>
 
@@ -83,25 +101,25 @@
                 <div class="mb-3 mt-4">
                     <label for="RegisterAs" class="form-label">Register as?</label>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="RegisterAs" value="observer"
+                        <input class="form-check-input RegisterAs" type="radio" name="RegisterAs" value="observer"
                             id="RegisterAsObserver">
-                        <label class="form-check-label" for="RegisterAsObserver">Observer</label>
+                        <label class="form-check-label RegisterAs" for="RegisterAsObserver">Observer</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="RegisterAs" value="participant"
+                        <input class="form-check-input RegisterAs" type="radio" name="RegisterAs" value="participant"
                             id="RegisterAsParticipant">
                         <label class="form-check-label" for="RegisterAsParticipant">Participant</label>
                     </div>
                     <div class="form-check">
 
-                        <input class="form-check-input" type="radio" name="RegisterAs" value="participantAndSocialEvent"
+                        <input class="form-check-input RegisterAs" type="radio" name="RegisterAs" value="participantAndSocialEvent"
                             id="RegisterAsParticipantAndSocialEvent">
 
                         <label class="form-check-label" for="RegisterAsParticipantAndSocialEvent">Participant + Social
                             Event</label>
                     </div>
                 </div>
-                <div class="mb-3" id="sports" style="display: none;">
+                <div class="mb-3 border-start ps-3 ms-3" id="sports" style="display: none;">
                     <label for="selectsport" class="form-label">Select Sport</label>
 
 
@@ -113,8 +131,8 @@
                     </div>
                     <div class="mb-3 mt-2 ms-4 border-start ps-2" id="FutsalPlayersDiv" style="display: none;">
                         <label for="FutsalPlayers" class="form-label">Total Players</label>
-                        <input type="number" class="form-control" id="FutsalPlayers" name="FutsalPlayers" min="5"
-                            max="8" value="5" placeholder="Enter Total Team Players (5-8)" />
+                        <input type="number" class="form-control" id="FutsalPlayers" name="FutsalPlayers" min="4"
+                            max="7" value="4" placeholder="Enter Total Team Players (4-7)" />
                         <div id="FutsalPlayersError" class="text-danger" style="display: none;"></div>
                         <div id="playersDetailsDiv">
                             <!-- Player details will be dynamically added here -->
@@ -133,7 +151,7 @@
                         <label for="BasketballPlayers" class="form-label">Total Players</label>
 
                         <input type="number" class="form-control" id="BasketballPlayers" name="BasketballPlayers"
-                            min="5" max="8" value="5" placeholder="Enter Total Team Players (5-8)" />
+                            min="4" max="7" value="4" placeholder="Enter Total Team Players (4-7)" />
 
                         <div id="BasketballPlayersError" class="text-danger" style="display: none;"></div>
                         <div id="basketballplayersDetailsDiv">
@@ -168,7 +186,9 @@
 
                             <div class='mb-2'>
                                 <label for='badmintonSecondPlayerType' class='form-label'>Is the player a student at
-                                    IMSciences?</label>
+                                    IMSciences?
+                                    <span class="badge text-danger fs-20">*</span>
+                                </label>
                                 <div class="form-check">
                                     <input class="form-check-input badmintonSecondPlayerType" type="radio"
                                         name="badmintonSecondPlayerType" value="yes" id="badmintonSecondPlayerTypeYes">
@@ -179,51 +199,67 @@
                                         name="badmintonSecondPlayerType" value="no" id="badmintonSecondPlayerTypeNo">
                                     <label class="form-check-label" for="badmintonSecondPlayerTypeNo">No</label>
                                 </div>
-                                <div class='border-start ps-3 ms-3' id='badmintonSecondPlayerTypeDiv'
+                                <div class='border-start ps-2 ms-3' id='badmintonSecondPlayerTypeDiv'
                                     style='display:none;'>
                                     <div class="mb-2">
                                         <label for="badmintonSecondPlayerId" class="form-label">Upload student ID
-                                            card</label>
+                                            card
+                                            <span class="badge text-danger fs-20">*</span>
+                                        </label>
                                         <input type="file" class="form-control" name="badmintonSecondPlayerId"
                                             id="badmintonSecondPlayerId" accept="image/png,image/PNG, image/jpg, image/jpeg" />
-
+                                            <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>
                                         
                                     </div>
                                 </div>
                             </div>
                             <div class="mb-2">
-                                <label for="badmintonSecondPlayerImage" class="form-label">Upload Player Picture</label>
+                                <label for="badmintonSecondPlayerImage" class="form-label">Upload Player Picture
+                                    <span class="badge text-danger fs-20">*</span>
+                                </label>
                                 <input type="file" class="form-control" name="badmintonSecondPlayerImage"
                                     id="badmintonSecondPlayerImage" accept="image/png,image/PNG, image/jpg, image/jpeg"/>
+                                    <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>
 
                             </div>
                             <div class="mb-2">
-                                <label for="badmintonSecondPlayerName" class="form-label">Name</label>
+                                <label for="badmintonSecondPlayerName" class="form-label">Name
+                                    <span class="badge text-danger fs-20">*</span>
+                                </label>
                                 <input type="text" class="form-control" name="badmintonSecondPlayerName"
                                     id="badmintonSecondPlayerName" placeholder="Enter Player Name" />
                             </div>
 
                             <div class="mb-2">
-                                <label for="badmintonSecondPlayerContact" class="form-label">Contact Number</label>
+                                <label for="badmintonSecondPlayerContact" class="form-label">Contact Number
+                                    <span class="badge text-danger fs-20">*</span>
+                                </label>
                                 <input type="number" class="form-control" name="badmintonSecondPlayerContact"
                                     id="badmintonSecondPlayerContact" placeholder="Enter Player Contact Number" />
                             </div>
 
                             <div class="mb-2">
-                                <label for="badmintonSecondPlayerCnic" class="form-label">CNIC</label>
+                                <label for="badmintonSecondPlayerCnic" class="form-label">CNIC
+                                    <span class="badge text-danger fs-20">*</span>
+                                </label>
                                 <input type="email" class="form-control" name="badmintonSecondPlayerCnic"
                                     id="badmintonSecondPlayerCnic" placeholder="Enter Player CNIC" />
                             </div>
 
                             <div class="mb-2" id='badmintonSecondPlayerCnicImageDiv'>
-                                <label for="badmintonSecondPlayerCnicImage" class="form-label">Player CNIC</label>
+                                <label for="badmintonSecondPlayerCnicImage" class="form-label">Player CNIC
+                                    <span class="badge text-danger fs-20">*</span>
+                                </label>
                                 <input type="file" class="form-control" name="badmintonSecondPlayerCnicImage"
                                     id="badmintonSecondPlayerCnicImage" accept="image/png,image/PNG, image/jpg, image/jpeg" />
+                                    <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>
                             </div>
 
-                            <div id='badmintonSecondPlayerSocialEventDiv'>
+                            <div class="badmintonSecondPlayerSocialEventDiv" id='badmintonSecondPlayerSocialEventDiv' style="display: none;">
                                 <label for='badmintonSecondPlayerAttendSocialEvent' class='form-label'>Does the player
-                                    wish to attend the social event?</label>
+                                    wish to attend the social event?
+                                    <span class="badge text-danger fs-20">*</span>
+                                </label>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio"
                                         name="badmintonSecondPlayerAttendSocialEvent" value="yes"
@@ -395,9 +431,13 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <div class="mt-3 mb-3" id="paymentScreenshotDiv" style="display: none;">
-                    <label for="paymentScreenshot">Upload Payment Screenshot</label>
+                    <label for="paymentScreenshot">Upload Payment Screenshot
+                        <span class="badge text-danger fs-20">*</span>
+                    </label>
                     <input type="file" class="form-control" name="paymentScreenshot" id="paymentScreenshot"
-                        accept="image/png,image/PNG, image/jpg, image/jpeg" />
+                        accept="image/png,image/PNG, image/jpg, image/jpeg" required/>
+                        <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>
+
                 </div>
             </div>
         </div>
